Overflow fix

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -2,14 +2,16 @@
 
 button {
     cursor: pointer;
-    width: max-content;
-    min-width: 100px;
+    flex: 1;
     background-color: $bg-primary;
     color: $primary;
-    padding: 1.5vh;
+    padding: 1%;
     border-radius: 8px;
     border: $bg-primary 1px solid;
+    text-align: center;
+    max-width: 15%;
 }
+
 
 button:disabled {
     cursor: not-allowed;
