--- a/src/styles/lists.scss
+++ b/src/styles/lists.scss
@@ -1,7 +1,7 @@
 @import "colors.scss";
 
 ul {
-    margin-top: 1vh;
+    margin-top: 1%;
     padding-left: 0;
 }
 
@@ -12,7 +12,7 @@ ul li {
     cursor: pointer;
     border: 1px solid $border;
     border-radius: 2px;
-    margin-top: 2vh;
+    margin-top: 2%;
     padding: 2%;
 }
 
